--- a/flex/06-flex-layout/index.html
+++ b/flex/06-flex-layout/index.html
@@ -9,14 +9,14 @@
 </head>
 <body>
   <div class="header">
-    <ul class="left-links">
-      <li><a href="google.com">About</a></li>
-      <li><a href="google.com">Store</a></li>
-    </ul>
-    <ul class="right-links">
-      <li><a href="google.com">Profile</a></li>
-      <li><a href="google.com">Settings</a></li>
-    </ul>
+    <div class="left">
+      <a href="google.com">About</a>
+      <a href="google.com">Store</a>
+    </div>
+    <div class="right">
+      <a href="google.com">Profile</a>
+      <a href="google.com">Settings</a>
+    </div>
   </div>
   <div class="content">
     <img src="./logo.png" alt="">
@@ -29,14 +29,15 @@
     </div>
   </div>
   <div class="footer">
-    <ul class="left-links">
-      <li><a href="google.com">Advertising</a></li>
-      <li><a href="google.com">Business</a></li>
-    </ul>
-    <ul class="right-links">
-      <li><a href="google.com">Privacy</a></li>
-      <li><a href="google.com">Terms</a></li>
-    </ul>
+    <div class="left-links">
+      <a href="google.com">Advertising</a>
+      <a href="google.com">Business</a>
+    </div>
+    <div class="right-links">
+      <a href="google.com">Privacy</a>
+      <a href="google.com">Terms</a>
+    </div>
+
   </div>
 </body>
 </html>
